<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- Question Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/questionTextView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/multipleChoiceOptions"
        android:layout_width="273dp"
        android:layout_height="331dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionTextView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/option_1" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/option_2" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/option_3" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="8dp"
            android:text="@string/option_4" />
    </RadioGroup>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trueFalseOptions"
        android:layout_width="244dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionTextView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/true_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/falseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/false_btn" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/noResultsLyt"
        android:layout_width="384dp"
        android:layout_height="419dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showNoResultsText"
            android:layout_width="336dp"
            android:layout_height="190dp"
            android:text="@string/no_result_description"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/responseCodeText"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/response_code_description"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_btn" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/correct"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/incorrect_ans"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/correctAnsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_ans"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_btn"
        android:visibility="gone"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lifelineBtn"
        android:layout_width="108dp"
        android:layout_height="72dp"
        android:text="@string/use_lifelines_btn"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409">

    </com.google.android.material.button.MaterialButton>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lifelineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifelineBtn">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fifty_fifty_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fiftyFiftyLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="17sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/skip_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skipLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="17sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
